# argos3-examples

./: CMakeLists.txt  LICENSE  README  README.md
cmake/: FindGALIB.cmake
controllers/: CMakeLists.txt
controllers/epuck_obstacleavoidance/: CMakeLists.txt  epuck_obstacleavoidance.cpp  epuck_obstacleavoidance.h
controllers/eyebot_circle/: CMakeLists.txt  eyebot_circle.cpp  eyebot_circle.h  footbot_circle.cpp  footbot_circle.h
controllers/eyebot_flocking/: CMakeLists.txt  eyebot_flocking.cpp  eyebot_flocking.h
controllers/footbot_diffusion/: CMakeLists.txt  footbot_diffusion.cpp  footbot_diffusion.h
controllers/footbot_flocking/: CMakeLists.txt  footbot_flocking.cpp  footbot_flocking.h
controllers/footbot_foraging/: CMakeLists.txt  footbot_foraging.cpp  footbot_foraging.h
controllers/footbot_gripping/: CMakeLists.txt  footbot_gripping.cpp  footbot_gripping.h
controllers/footbot_manualcontrol/: CMakeLists.txt  footbot_manualcontrol.cpp  footbot_manualcontrol.h
controllers/footbot_nn/: CMakeLists.txt  footbot_nn_controller.cpp  footbot_nn_controller.h
controllers/footbot_nn/nn/: ctrnn_multilayer.cpp  ctrnn_multilayer.h  neural_network.cpp  neural_network.h  perceptron.cpp  perceptron.h
controllers/footbot_synchronization/: CMakeLists.txt  footbot_synchronization.cpp  footbot_synchronization.h
embedding/: CMakeLists.txt
embedding/galib/: CMakeLists.txt  main.cpp
embedding/mpga/: CMakeLists.txt  main.cpp  mpga.cpp  mpga.h
experiments/: custom_distributions.argos  diffusion_1.argos  diffusion_10.argos  diffusion_1000.argos  epuck_obstacleavoidance.argos  evolution-trial.argos  evolution.argos  eyebot_circle.argos  eyebot_flocking.argos  flocking.argos  foraging.argos  galib-trial.argos  galib.argos  gripping.argos  id.argos  manualcontrol.argos  mpga-trial.argos  mpga.argos  multiple_engines.argos  synchronization.argos  trajectory.argos
loop_functions/: CMakeLists.txt
loop_functions/custom_distributions_loop_functions/: CMakeLists.txt  custom_distributions_loop_functions.cpp  custom_distributions_loop_functions.h
loop_functions/evolution_loop_functions/: CMakeLists.txt  evolution_loop_functions.cpp  evolution_loop_functions.h
loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp  foraging_loop_functions.h  foraging_qt_user_functions.cpp  foraging_qt_user_functions.h
loop_functions/galib_phototaxis_loop_functions/: CMakeLists.txt  galib_phototaxis_loop_functions.cpp  galib_phototaxis_loop_functions.h
loop_functions/id_loop_functions/: CMakeLists.txt  id_qtuser_functions.cpp  id_qtuser_functions.h
loop_functions/manualcontrol_loop_functions/: CMakeLists.txt  manualcontrol_qtuser_functions.cpp  manualcontrol_qtuser_functions.h
loop_functions/mpga_loop_functions/: CMakeLists.txt  mpga.cpp  mpga.h  mpga_loop_functions.cpp  mpga_loop_functions.h  mpga_phototaxis_loop_functions.cpp  mpga_phototaxis_loop_functions.h
loop_functions/trajectory_loop_functions/: CMakeLists.txt  trajectory_loop_functions.cpp  trajectory_loop_functions.h  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
