include_directories(${CMAKE_SOURCE_DIR}/controllers)

add_subdirectory(footbot_diffusion)
add_subdirectory(footbot_synchronization)
add_subdirectory(footbot_flocking)
add_subdirectory(footbot_gripping)
add_subdirectory(footbot_foraging)
add_subdirectory(footbot_manualcontrol)
add_subdirectory(footbot_nn)
add_subdirectory(eyebot_circle)
add_subdirectory(eyebot_flocking)
add_subdirectory(epuck_obstacleavoidance)
