set(custom_distributions_loop_functions_SOURCES
  custom_distributions_loop_functions.h
  custom_distributions_loop_functions.cpp)

add_library(custom_distributions_loop_functions MODULE
  ${custom_distributions_loop_functions_SOURCES})
target_link_libraries(custom_distributions_loop_functions
  argos3core_simulator
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot)
